💄 (pilars) fix too much padding top

--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ li {
   flex: 2;
   flex-direction: column;
   align-items: center;
-  margin: 0.5rem 0;
   gap: 1rem;
 }
 
